--- a/1.2, 1.3.md
+++ b/1.2, 1.3.md
@@ -35,3 +35,12 @@ Two types of systems sofware
 	- Several DRAMs are used together to contain the instructions and data of a program
 - The processor is the active part of the board
 - Occasionally, people call the processor the CPU, for the more bureaucratic­sounding central processor unit. 
+
+-  The processor logically comprises two main components: datapath and control
+	-  The datapath performs the arithmetic operations
+	- The control tells the datapath, memory, and I/O devices what to do 
+-  Inside the processor is another type of memory— **cache memory**.
+	- Cache memory consists of a small, fast memory that acts as a buffer for the DRAM memory.
+	- Cache is built using a different memory technology, **static random access memory (SRAM)**. 
+-  The use of such layers, or **abstractions**, is a principal technique for designing very sophisticated computer systems.
+- One of the most important abstractions is the interface between the hardware and the lowest­level software -> **architecture** of a computer
